updated package.json + 7-1 sass architecture

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>frontend boilerplate</title>
+  <title>Your Project</title>
 </head>
 <body>
-  <h1>Your Project starts here</h1>
-  <p>This boilerplate compiles es6 and scss to its respective languages suported by the browser</p>
+  <div class="title">
+    <h1>Your</h1>
+    <h1>Dreams</h1>
+    <h1>Start</h1>
+    <h1>Here</h1>
+  </div>
 </body>
 </html>
